--- a/bakery.html
+++ b/bakery.html
@@ -8,12 +8,12 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="./images/logo.svg" alt="logo" /></a>
+        <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#Traditions-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#Formats-section">Формати</a></li>
+          <li><a href="#contakts-section">Контакти</a></li>
         </ul>
       </nav>
       <button type="button">Замовити дзвінок</button>
@@ -22,7 +22,7 @@
       <section>
         <h1>Сучасна пекарня</h1>
       </section>
-      <section>
+      <section id="Traditions-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -40,7 +40,7 @@
         </p>
         <img src="./images/baker man.jpg" alt="menszczyzna z chlebem" />
       </section>
-      <section>
+      <section id="chefs-section">
         <h2>Наші найкращі шеф -кухарі</h2>
         <ul>
           <li>
@@ -64,7 +64,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="Formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -98,19 +98,28 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="contakts-section">
         <h2>Приєднуйся до мережі пекарень</h2>
         <p><span>Заповни форму, щоб ми звʼязались з тобою!</span></p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352805!2d30.488698376251563!3d50.456677571593346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2spl!4v1765048853273!5m2!1suk!2spl"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
     <footer>
       <nav>
-        <a href="#"><img src="./images/logo.svg" alt="logo" /></a>
+        <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#Traditions-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#Formats-section">Формати</a></li>
+          <li><a href="#contakts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
@@ -138,7 +147,7 @@
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
