--- a/bakery.html
+++ b/bakery.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakery</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
       <nav>
         <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
         <ul>
-          <li><a href="#Traditions-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#Formats-section">Формати</a></li>
-          <li><a href="#contakts-section">Контакти</a></li>
+          <li><a class="link" href="#Traditions-section">Наші традиції</a></li>
+          <li><a class="link" chref="#chefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#Formats-section">Формати</a></li>
+          <li><a class="link" href="#contakts-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
-        <h1>Сучасна пекарня</h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
-      <section id="Traditions-section">
-        <ul>
+      <section  id="Traditions-section">
+        <ul class="advantage-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
@@ -41,7 +42,7 @@
         <img src="./images/baker man.jpg" alt="menszczyzna z chlebem" />
       </section>
       <section id="chefs-section">
-        <h2>Наші найкращі шеф -кухарі</h2>
+        <h2 class="chef-title">Наші найкращі <span class="accent">шеф -кухарі</span></h2>
         <ul>
           <li>
             <article>
@@ -103,8 +104,8 @@
         <p><span>Заповни форму, щоб ми звʼязались з тобою!</span></p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352805!2d30.488698376251563!3d50.456677571593346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2spl!4v1765048853273!5m2!1suk!2spl"
-          width="600"
-          height="450"
+          width="603"
+          height="595"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
