Add Poppins font files in WOFF2 format for Latin 900 and regular weights

--- a/bakery.html
+++ b/bakery.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakery</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
   </head>
   <body>
     <header>
@@ -23,7 +24,7 @@
       <section>
         <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
-      <section  id="Traditions-section">
+      <section id="Traditions-section">
         <ul class="advantage-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -42,7 +43,9 @@
         <img src="./images/baker man.jpg" alt="menszczyzna z chlebem" />
       </section>
       <section id="chefs-section">
-        <h2 class="chef-title">Наші найкращі <span class="accent">шеф -кухарі</span></h2>
+        <h2 class="chef-title">
+          Наші найкращі <span class="accent">шеф -кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
