--- a/bakery.html
+++ b/bakery.html
@@ -13,7 +13,7 @@
         <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
         <ul>
           <li><a class="link" href="#Traditions-section">Наші традиції</a></li>
-          <li><a class="link" chref="#chefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
           <li><a class="link" href="#Formats-section">Формати</a></li>
           <li><a class="link" href="#contakts-section">Контакти</a></li>
         </ul>
@@ -26,30 +26,31 @@
       </section>
       <section id="Traditions-section">
         <ul class="advantage-list">
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
+          <li class="advantage-item">Великий попит на ринку</li>
+          <li class="advantage-item">Доступні за бюджетом формати</li>
+          <li class="advantage-item">Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
-        <p>
-          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
-          зберегла смак традиційної випічки та натуральність інгредієнтів.
+        <h2 class="section-title">Новий формат традицій</h2>
+        <p class="tradition-text">
+          <span class="uppercase">shop bakery</span> — це пекарня, яка взяла все
+          найкраще, і зберегла смак традиційної випічки та натуральність
+          інгредієнтів.
         </p>
-        <p>
+        <p class="tradition-text">
           Ми працюємо як найвідоміші мережі—
           <span>5 хвилин</span> і замовлення готове. А ще у наших пекарень
           стильний дизайн та висока якість обслуговування!
         </p>
-        <img src="./images/baker man.jpg" alt="menszczyzna z chlebem" />
+        <img src="./images/baker_man.jpg" alt="menszczyzna z chlebem" />
       </section>
       <section id="chefs-section">
-        <h2 class="chef-title">
+        <h2 class="section-title">
           Наші найкращі <span class="accent">шеф -кухарі</span>
         </h2>
         <ul>
           <li>
             <article>
-              <h3>Настя</h3>
+              <h3 class="chefs-title">Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
               <p>Я випічу для вас найсмачніщі вироби!</p>
@@ -57,7 +58,7 @@
           </li>
           <li>
             <article>
-              <h3>Влад</h3>
+              <h3 class="chefs-title">Влад</h3>
               <p>Привіт, я Влад!</p>
               <p>
                 Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
@@ -69,42 +70,49 @@
         </ul>
       </section>
       <section id="Formats-section">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
-              <h3 lang="en">Walrus</h3>
-              <p>
-                Площа: до 120 м2 Меню: розширене меню Штат: 2 продавці-касири, 2
-                пекарі, 2 помічники пекаря, 2 офіціанти-різнороби Посадкові
-                місця: є
-              </p>
+              <h3 class="format-title" lang="en">Walrus</h3>
+              <div class="format-text">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
+                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                  офіціанти-різнороби
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Horseshoe</h3>
-              <p>
-                Площа: до 25 м2 Меню: найпопулярніші позиції меню Штат: 2
-                продавці-касири, 2 пекарі, 1 помічник пекаря Посадкові місця:
-                відсутні
-              </p>
+              <h3 class="format-title" lang="en">Horseshoe</h3>
+              <div class="format-text">
+                <p>Площа: до 25 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Handlebar</h3>
-              <p>
-                Площа: до 15 м2 Меню: найпопулярніші позиції меню Штат: 1
-                продавець, 1 пекар, 1 помічник пекаря Посадкові місця: відсутні
-              </p>
+              <h3 class="format-title" lang="en">Handlebar</h3>
+              <div class="format-text">
+                <p>Площа: до 15 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
         </ul>
       </section>
       <section id="contakts-section">
-        <h2>Приєднуйся до мережі пекарень</h2>
-        <p><span>Заповни форму, щоб ми звʼязались з тобою!</span></p>
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+        <p class="contakt-text">Заповни форму, щоб ми звʼязались з тобою!</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352805!2d30.488698376251563!3d50.456677571593346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2spl!4v1765048853273!5m2!1suk!2spl"
           width="603"
@@ -120,22 +128,29 @@
       <nav>
         <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
         <ul>
-          <li><a href="#Traditions-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#Formats-section">Формати</a></li>
-          <li><a href="#contakts-section">Контакти</a></li>
+          <li><a class="link" href="#Traditions-section">Наші традиції</a></li>
+          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#Formats-section">Формати</a></li>
+          <li><a class="link" href="#contakts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+            <a class="adres-link" href="tel:+380960000007"
+              >+ 38 (096) 000 00 07</a
+            >
           </li>
           <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            <a class="adres-link" href="mailto:shopbakery@gmail.com"
+              >shopbakery@gmail.com</a
+            >
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/Exx6NtRCP6JFicFTA" target="_blank"
+            <a
+              class="adres-link"
+              href="https://maps.app.goo.gl/Exx6NtRCP6JFicFTA"
+              target="_blank"
               >Україна, м. Київ, вул. Січових Стрільців 54</a
             >
           </li>
@@ -150,8 +165,10 @@
             </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>&copy; 2022 Дані захищені</p>
+        <a class="adres-link" href="#" target="_blank"
+          >Політика конфіденційності</a
+        >
+        <p class="copyright">&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
