--- a/bakery.html
+++ b/bakery.html
@@ -5,171 +5,198 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakery</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
-        <ul>
-          <li><a class="link" href="#Traditions-section">Наші традиції</a></li>
-          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a class="link" href="#Formats-section">Формати</a></li>
-          <li><a class="link" href="#contakts-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <button class="button" type="button">Замовити дзвінок</button>
+      <div class="contener">
+        <nav>
+          <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
+          <ul>
+            <li>
+              <a class="link" href="#Traditions-section">Наші традиції</a>
+            </li>
+            <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+            <li><a class="link" href="#Formats-section">Формати</a></li>
+            <li><a class="link" href="#contakts-section">Контакти</a></li>
+          </ul>
+        </nav>
+        <button class="button" type="button">Замовити дзвінок</button>
+      </div>
     </header>
     <main>
       <section>
-        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+        <div class="contener">
+          <h1 class="hero-title">
+            <span class="accent">Сучасна</span> пекарня
+          </h1>
+        </div>
       </section>
-      <section id="Traditions-section">
-        <ul class="advantage-list">
-          <li class="advantage-item">Великий попит на ринку</li>
-          <li class="advantage-item">Доступні за бюджетом формати</li>
-          <li class="advantage-item">Досвідчена управлінська команда</li>
-        </ul>
-        <h2 class="section-title">Новий формат традицій</h2>
-        <p class="tradition-text">
-          <span class="uppercase">shop bakery</span> — це пекарня, яка взяла все
-          найкраще, і зберегла смак традиційної випічки та натуральність
-          інгредієнтів.
-        </p>
-        <p class="tradition-text">
-          Ми працюємо як найвідоміші мережі—
-          <span>5 хвилин</span> і замовлення готове. А ще у наших пекарень
-          стильний дизайн та висока якість обслуговування!
-        </p>
-        <img src="./images/baker_man.jpg" alt="menszczyzna z chlebem" />
+      <section class="section">
+        <div class="contener">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <ul class="advantage-list">
+            <li class="advantage-item">Великий попит на ринку</li>
+            <li class="advantage-item">Доступні за бюджетом формати</li>
+            <li class="advantage-item">Досвідчена управлінська команда</li>
+          </ul>
+        </div>
       </section>
-      <section id="chefs-section">
-        <h2 class="section-title">
-          Наші найкращі <span class="accent">шеф -кухарі</span>
-        </h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="chefs-title">Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-              <p>Я випічу для вас найсмачніщі вироби!</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="chefs-title">Влад</h3>
-              <p>Привіт, я Влад!</p>
-              <p>
-                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
-                з якою ми ділимось кожен раз з Вами через нашу випічку!
-              </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-            </article>
-          </li>
-        </ul>
+      <section class="section" id="Traditions-section">
+        <div class="contener">
+          <h2 class="tradition-title section-title">Новий формат традицій</h2>
+          <p class="tradition-text">
+            <span class="uppercase">shop bakery</span> — це пекарня, яка взяла
+            все найкраще, і зберегла смак традиційної випічки та натуральність
+            інгредієнтів.
+          </p>
+          <p class="tradition-text">
+            Ми працюємо як найвідоміші мережі—
+            <span>5 хвилин</span> і замовлення готове. А ще у наших пекарень
+            стильний дизайн та висока якість обслуговування!
+          </p>
+          <img src="./images/baker_man.jpg" alt="menszczyzna z chlebem" />
+        </div>
       </section>
-      <section id="Formats-section">
-        <h2 class="section-title">Формати</h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Walrus</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
+      <section class="section" id="chefs-section">
+        <div class="contener">
+          <h2 class="chef-title section-title">
+            Наші найкращі <span class="accent">шеф -кухарі</span>
+          </h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="chefs-title">Настя</h3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+                <p>Я випічу для вас найсмачніщі вироби!</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="chefs-title">Влад</h3>
+                <p>Привіт, я Влад!</p>
                 <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
+                  Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
+                  любов, з якою ми ділимось кожен раз з Вами через нашу випічку!
                 </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Horseshoe</h3>
-              <div class="format-text">
-                <p>Площа: до 25 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Handlebar</h3>
-              <div class="format-text">
-                <p>Площа: до 15 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-        </ul>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section id="contakts-section">
-        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
-        <p class="contakt-text">Заповни форму, щоб ми звʼязались з тобою!</p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352805!2d30.488698376251563!3d50.456677571593346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2spl!4v1765048853273!5m2!1suk!2spl"
-          width="603"
-          height="595"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+      <section class="section" id="Formats-section">
+        <div class="contener">
+          <h2 class="format-title section-title">Формати</h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="formats-title" lang="en">Walrus</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="formats-title" lang="en">Horseshoe</h3>
+                <div class="format-text">
+                  <p>Площа: до 25 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="formats-title" lang="en">Handlebar</h3>
+                <div class="format-text">
+                  <p>Площа: до 15 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="secyion" id="contakts-section">
+        <div class="contener">
+          <h2 class="contakt-title section-title">
+            Приєднуйся до мережі пекарень
+          </h2>
+          <p class="contakt-text">Заповни форму, щоб ми звʼязались з тобою!</p>
+          <button class="button" type="button">Замовити дзвінок</button>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352805!2d30.488698376251563!3d50.456677571593346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2spl!4v1765048853273!5m2!1suk!2spl"
+            width="603"
+            height="595"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </section>
     </main>
     <footer>
-      <nav>
-        <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
-        <ul>
-          <li><a class="link" href="#Traditions-section">Наші традиції</a></li>
-          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a class="link" href="#Formats-section">Формати</a></li>
-          <li><a class="link" href="#contakts-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="adres-link" href="tel:+380960000007"
-              >+ 38 (096) 000 00 07</a
-            >
-          </li>
-          <li>
-            <a class="adres-link" href="mailto:shopbakery@gmail.com"
-              >shopbakery@gmail.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="adres-link"
-              href="https://maps.app.goo.gl/Exx6NtRCP6JFicFTA"
-              target="_blank"
-              >Україна, м. Київ, вул. Січових Стрільців 54</a
-            >
-          </li>
-          <li>
-            <a href="#">
-              <!-- logo face -->
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- logo ig -->
-            </a>
-          </li>
-        </ul>
-        <a class="adres-link" href="#" target="_blank"
-          >Політика конфіденційності</a
-        >
-        <p class="copyright">&copy; 2022 Дані захищені</p>
-      </address>
+      <div class="contener">
+        <nav>
+          <a href="./bakery.html"><img src="./images/logo.svg" alt="logo" /></a>
+          <ul>
+            <li>
+              <a class="link" href="#Traditions-section">Наші традиції</a>
+            </li>
+            <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+            <li><a class="link" href="#Formats-section">Формати</a></li>
+            <li><a class="link" href="#contakts-section">Контакти</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a class="adres-link" href="tel:+380960000007"
+                >+ 38 (096) 000 00 07</a
+              >
+            </li>
+            <li>
+              <a class="adres-link" href="mailto:shopbakery@gmail.com"
+                >shopbakery@gmail.com</a
+              >
+            </li>
+            <li>
+              <a
+                class="adres-link"
+                href="https://maps.app.goo.gl/Exx6NtRCP6JFicFTA"
+                target="_blank"
+                >Україна, м. Київ, вул. Січових Стрільців 54</a
+              >
+            </li>
+            <li>
+              <a href="#">
+                <!-- logo face -->
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- logo ig -->
+              </a>
+            </li>
+          </ul>
+          <a class="adres-link" href="#" target="_blank"
+            >Політика конфіденційності</a
+          >
+          <p class="copyright">&copy; 2022 Дані захищені</p>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
